fixed the overflowing issue with code block PRE tag

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -58,6 +58,14 @@ hr{
     height: 2px;
     background-color: $medium-grey;
 }
+pre {
+    white-space: pre-wrap;       /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+    overflow-x: auto;            /* Allow horizontal scrolling if needed */
+}
 .link_to{
     font-weight: $regular;
     text-decoration: underline;
